plugins {
  id 'java'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

group = 'io.event-driven'
version = '0.0.1-SNAPSHOT'

repositories {
  mavenCentral()
}

dependencies {
  // Serialisation
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'

  // EventStoreDB client
  implementation 'com.eventstore:db-client-java:5.3.2'

  // Logging
  implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
  implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
  implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'

  // Test frameworks
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
  testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
}

tasks.named('test') {
  useJUnitPlatform {
    excludeTags 'Exercise'
  }
}

test {
  testLogging.showStandardStreams = true
  testLogging.exceptionFormat = 'full'
}
